<resources>
    <string name="app_name">Akimbo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Вход</string>
    <string name="Email">Email</string>
    <string name="password">Passowd</string>
    <string name="click_to_register">Нажми для регистрации</string>
    <string name="register">Регистрация</string>
    <string name="click_to_login">Нажми для входа</string>
    <string name="free_12_60">FREE 12 месяцев, с заморозкой(60 дней)</string>
    <string name="Личный_кабинет">⇐ Личный кабиет</string>
    <string name="_30_11_2023">Действует до 30.11.2023</string>
</resources>